[workspace]
resolver = "2"

members = [
    "pallets/ares-oracle",
    "pallets/ares-oracle-provider-support",
    "pallets/oracle-finance",
    "pallets/staking-extend",
    "pallets/challenge",
    "pallets/price-estimates",
    "pallets/price-estimates3",
    "pallets/manual-bridge",
    "rpc/ares-rpc",
    "tools/seed-reader",
    "tools/bound-vec-helper",
]

