[workspace]
resolver = "2"

members = [
    "pallets/ares-oracle",
    "pallets/ares-oracle-provider-support",
    "pallets/ares-reminder",
    "pallets/oracle-finance",
    "pallets/staking-extend",
    "pallets/challenge",
    "pallets/price-estimates",
    "pallets/manual-bridge",
    "rpc/ares-rpc",
    "tools/seed-reader",
    "tools/bound-vec-helper",
]

