[package]
name = "ares-oracle-provider-support"
version = "3.0.1"
authors = ["Ares Technologies <linhai@cancanyou.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
description = "Ares price submit."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }

sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }

[features]
default = ["std"]

std = [
    "codec/std",
    "sp-application-crypto/std",
    "sp-io/std",
    "lite-json/std",
    "frame-support/std",
    "sp-std/std",
]

