[package]
name = "ares-oracle-provider-support"
version = "3.0.1"
authors = ["Ares Technologies <linhai@cancanyou.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
description = "Ares price submit."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
impl-trait-for-tuples = "0.2.2"
lite-json = { version = "0.1", default-features = false }
#scale-info = { version = "1.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }

#ares-common = {path="../../common", default-features = false}

[features]
default = ["std"]

std = [
    "codec/std",
    "sp-runtime/std",
    "scale-info/std",
    "sp-application-crypto/std",
    "sp-io/std",
    "lite-json/std",
    "frame-support/std",
    "sp-std/std",
#    "ares-common/std",
]

