[package]
name = "ares-oracle"
version = "3.10.1"
authors = ["Ares Technologies <linhai@cancanyou.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
description = "Ares price submit."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { version = "0.4", default-features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.17" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

oracle-finance = { default-features = false, path = "../oracle-finance" }
staking-extend = { default-features = false, path = "../staking-extend" }
ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }
pallet-session = { path = "../session", default-features = false, features = ["historical"] }


[dev-dependencies]
#static_assertions = "1.1.0"
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }


[features]
default = ["std"]

std = [
    "sp-application-crypto/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "lite-json/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keystore",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "hex/std",
    "serde/std",
    "serde_json/std",
    "sp-consensus-babe/std",
    "pallet-aura/std",
    "pallet-babe/std",
    "pallet-session/std",
    "ares-oracle-provider-support/std",
    "staking-extend/std", # Ares staking
    #	"sp-staking/std",
    #	"pallet-timestamp/std",
    "sp-consensus-aura/std",
    "pallet-balances/std",
    "oracle-finance/std",
]
try-runtime = ["frame-support/try-runtime"]
