[package]
name = "ares-oracle"
version = "3.1.2"
authors = ["Ares Technologies <linhai@cancanyou.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
description = "Ares price submit."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
impl-trait-for-tuples = "0.2.2"
serde = { version = '1.0.143', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.85', default-features = false, features = ['alloc'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["historical"], branch = "polkadot-v0.9.28" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28", optional = true }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }

oracle-finance = { default-features = false, path = "../oracle-finance" }
staking-extend = { default-features = false, path = "../staking-extend" }
ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }

[dev-dependencies]
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }

[features]
default = ["std"]

std = [
    "bound-vec-helper/std",
    "sp-application-crypto/std",
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "lite-json/std",
    "sp-core/std",
    "sp-io/std",
    "scale-info/std",
    "sp-keystore",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "hex/std",
    "serde/std",
    "serde_json/std",
    "sp-consensus-babe/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-session/std",
    "ares-oracle-provider-support/std",
    "staking-extend/std", # Ares staking
    "sp-consensus-aura/std",
    "pallet-balances/std",
    "oracle-finance/std",
]

runtime-benchmarks = [
    "pallet-timestamp/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "oracle-finance/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
