[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-ares-challenge'
publish = false
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ocw-suit"
version = '3.0.1'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
hex-literal = "0.3.4"
serde = "1.0.126"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

[dependencies]
# -- snip --
#codec = { package = "parity-scale-codec", features = ['derive'], version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
sp-std = { default-features = false, version = '3.0.0' }
#log = { version = "0.4.14", default-features = false }
log = { version = "0.4.17", default-features = false }
#scale-info = { version = "1.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.28" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
# -- snip --

[features]
default = ['std']

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]

std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-consensus-aura/std",
    "sp-consensus-slots/std",
    "sp-consensus-babe/std",
    "pallet-aura/std",
    "pallet-collective/std",
]
try-runtime = ['frame-support/try-runtime']
